<resources>
    <string name="app_name">Triwalks</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="name">Ta-Ching Chen</string>
    <string name="email">life1347@gmail.com</string>
    <string name="avatar">avatar</string>
    <string name="API_KEY">AIzaSyC9Z-J8bdaD04BAOemwxgK-znPSn8CAy3E</string>
    <string name="available_account_char">_-0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="available_email_char">_-0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.@</string>
    <string name="usf">usf.ini</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="done">DONE</string>
    <string name="cancel">CANCEL</string>
    <string name="row_number">This is row number %d</string>
    <string name="header">Header %d</string>
    <string name="itemdeleted">Item deleted</string>
    <string name="taptoundo">Tap to undo</string>
    <string name="global_font_fmaily">sans-serif-light</string>
    <string name="test_text">“You have to be careful,” the Hotel Beaufort’s receptionist, Rita Wyorek, warned me. “It comes in as fast as a person walking quickly.”
She said this with the sly confidence of someone who had perhaps raced the water just to see if she could. Large tidal variations occur up and down the English Channel, and their effects tend to be exaggerated by the shape of the bay. Saint-Malo’s location at the head of an estuary makes the phenomenon particularly dramatic because its bay fills with water from both the Atlantic and the Rance river.
While the town is hardly a secret, it’s somewhat overshadowed by its more famous sibling, Mont Saint-Michel, which attracts more than three and a half million visitors a year, compared with the little more than two million who make it to Saint-Malo. Located 55km west of Mont Saint-Michel and half an hour off the main highway, Saint-Malo tends to attract a more local crowd – a mix of French and British tourists who come for the beach and history, but end up captivated by the ocean’s wild vanishing act.
Surprisingly, the tides aren’t typically the first thing You have to be careful,” the Hotel Beaufort’s receptionist, Rita Wyorek, warned me. “It comes in as fast as a person walking quickly.”
She said this with the sly confidence of someone who had perhaps raced the water just to see if she could. Large tidal variations occur up and down the English Channel, and their effects tend to be exaggerated by the shape of the bay. Saint-Malo’s location at the head of an estuary makes the phenomenon particularly dramatic because its bay fills with water from both the Atlantic and the Rance river.
While the town is hardly a secret, it’s somewhat overshadowed by its more famous sibling, Mont Saint-Michel, which attracts more than three and a half million visitors a year, compared with the little more than two million who make it to Saint-Malo. Located 55km west of Mont Saint-Michel and half an hour off the main highway, Saint-Malo tends to attract a more local crowd – a mix of French and British tourists who come for the beach and history, but end up captivated by the ocean’s wild vanishing act.
Surprisingly, the tides aren’t typically the first thing You have to be careful,” the Hotel Beaufort’s receptionist, Rita Wyorek, warned me. “It comes in as fast as a person walking quickly.”
She said this with the sly confidence of someone who had perhaps raced the water just to see if she could. Large tidal variations occur up and down the English Channel, and their effects tend to be exaggerated by the shape of the bay. Saint-Malo’s location at the head of an estuary makes the phenomenon particularly dramatic because its bay fills with water from both the Atlantic and the Rance river.
While the town is hardly a secret, it’s somewhat overshadowed by its more famous sibling, Mont Saint-Michel, which attracts more than three and a half million visitors a year, compared with the little more than two million who make it to Saint-Malo. Located 55km west of Mont Saint-Michel and half an hour off the main highway, Saint-Malo tends to attract a more local crowd – a mix of French and British tourists who come for the beach and history, but end up captivated by the ocean’s wild vanishing act.
Surprisingly, the tides aren’t typically the first thing you hear about Saint-Malo. In fact, I’d come in search of a beach getaway and a peek at a medieval walled city. My hosts in France had assured me that the town was a lovely place for a dip in the ocean. They hadn’t mentioned that taking that dip is possible only during prescribed hours and after a 15- to 20-minute walk across damp sand.</string>
    <string name="basic">Basic</string>
    <string name="stacked">Stacked Buttons</string>
    <string name="neutral">Neutral Button</string>
    <string name="callbacks">Callbacks</string>
    <string name="list">Basic List</string>
    <string name="singleChoice">Single Choice</string>
    <string name="multiChoice">Multi Choice</string>
    <string name="customView">Custom View</string>
    <string name="themed">Themed</string>
    <string name="signalStrength">Signal strength</string>
    <string name="excellent">Excellent</string>
    <string name="security">Security</string>
    <string name="securityType">802.1x EAP</string>
    <string name="password">Password</string>
    <string name="showPassword">Show password</string>
    <string name="useGoogleLocationServices">Use Google\'s Location Services?</string>
    <string name="useGoogleLocationServicesPrompt">Let Google help apps determine location. This means sending anonymous location data to Google, even when no apps are running.</string>
    <string name="socialNetworks">Social Networks</string>
    <string name="choose">Choose</string>
    <string name="speedBoost">Turn on speed boost now!</string>
    <string name="noThanks">No thanks</string>
    <string name="googleWifi">Google Wifi</string>
    <string name="connect">Connect</string>
</resources>