<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/navdrawer_width"
    android:layout_height="match_parent"
    android:clickable="true"
    android:layout_gravity="left|start"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/chosen_account_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25">

        <ImageView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/beach"
            android:id="@+id/profile_cover_image" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/keyline_1"
            android:paddingRight="@dimen/keyline_1"
            android:paddingTop="@dimen/keyline_1"
            android:id="@+id/chosen_account_content_view"
            android:background="@color/dark_transparent">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/ic_launcher"
                android:scaleType="centerCrop"/>

            <ImageView
                android:id="@+id/expand_account_box_indicator"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_marginLeft="16dp"
                android:paddingBottom="16dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:scaleType="center"
                android:src="@drawable/ic_drawer_accounts_expand" />

            <TextView
                android:id="@+id/profile_email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/profile_image"
                android:layout_toLeftOf="@id/expand_account_box_indicator"
                android:layout_alignParentBottom="true"
                android:paddingBottom="16dp"
                android:textSize="13sp"
                android:textColor="@android:color/white"
                android:fontFamily="@string/global_font_fmaily"
                android:maxLines="1"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/email"/>

            <TextView
                android:id="@+id/profile_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/profile_email_text"
                android:layout_alignLeft="@id/profile_image"
                android:layout_toLeftOf="@id/expand_account_box_indicator"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:maxLines="1"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/name"/>

        </RelativeLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:orientation="vertical"
        android:layout_marginTop="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="12dp"
            android:id="@+id/navi_favorite"
            android:clickable="true">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_favorite"
                android:layout_marginLeft="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Favorite"
                android:layout_gravity="center"
                android:textSize="17sp"
                android:fontFamily="@string/global_font_fmaily"
                android:layout_marginLeft="32dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="12dp"
            android:id="@+id/navi_profile"
            android:clickable="true">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_person"
                android:layout_marginLeft="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Profile"
                android:layout_gravity="center"
                android:textSize="17sp"
                android:fontFamily="@string/global_font_fmaily"
                android:layout_marginLeft="32dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="12dp"
            android:id="@+id/navi_feedback"
            android:clickable="true">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_chat"
                android:layout_marginLeft="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Feedback"
                android:textSize="17sp"
                android:layout_gravity="center"
                android:fontFamily="@string/global_font_fmaily"
                android:layout_marginLeft="32dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="12dp"
            android:id="@+id/navi_logout"
            android:clickable="true">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_person_outline"
                android:layout_marginLeft="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Logout"
                android:textSize="17sp"
                android:layout_gravity="center"
                android:fontFamily="@string/global_font_fmaily"
                android:layout_marginLeft="32dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>