<?xml version="1.0" encoding="utf-8"?>
<!-- Content -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainFrame"
    android:background="@drawable/beach">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:orientation="vertical"
            android:layout_centerVertical="true">
            <LinearLayout
                android:id="@+id/account_zone"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_person"/>
                <EditText
                    android:id="@+id/account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:textSize="14dp"
                    android:hint="Account / Name"
                    android:digits="@string/available_account_char"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/email_zone"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_email"/>
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:textSize="14dp"
                    android:hint="Email"
                    android:digits="@string/available_email_char"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/passwd_zone"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_lock_open"/>
                <EditText
                    android:id="@+id/passwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:textSize="14dp"
                    android:hint="Password"
                    android:password="true"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/repasswd_zone"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_lock_outline"/>
                <EditText
                    android:id="@+id/repasswd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:textSize="14dp"
                    android:hint="Password Check"
                    android:password="true"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/country_zone"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:clickable="true">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_place"/>
                <AutoCompleteTextView
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:textSize="14dp"
                    android:hint="Country"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/passwd_zone"
                android:layout_gravity="center">
                <RelativeLayout
                    android:id="@+id/join_zone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_gravity="center"
                    android:clickable="true">
                    <TextView
                        android:id="@+id/join"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_dark"
                        android:text="JoinUs"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@string/global_font_fmaily"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/cancel_zone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_gravity="center"
                    android:clickable="true">
                    <TextView
                        android:id="@+id/cancel"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_weak"
                        android:text="Cancel"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@string/global_font_fmaily"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>